Bug 306923 - kconfig flag documentation misleading
Summary: kconfig flag documentation misleading
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdecore (other bugs)
Version First Reported In: 4.9-Git
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-17 12:06 UTC by Harald Sitter
Modified: 2019-03-01 10:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2012-09-17 12:06:53 UTC
the openflag documentation reads like this:
>      * If CascadeConfig is selected, system-wide configuration sources are used
>      * to provide defaults for the settings accessed through this object, or
>      * possibly to override those settings in certain cases.
>      *
>      * IncludeGlobals does the same, but with the global settings sources.

the particular documentation then goes:
>         IncludeGlobals  = 0x01, ///< Blend kdeglobals into the config object.
>         CascadeConfig   = 0x02, ///< Cascade to system-wide config files.

now that "does the same" part in the long documentation apparently makes people think that 0x01 somehow(?) includes 0x02, incidentally enough that is not the case and apps end up not cascading as expected giving distros a headache. therefore it would be very nice if the unclear "does the same" were to be replaced by an explicit statement of what it does.

Reproducible: Always
Comment 1 Harald Sitter 2019-03-01 10:32:23 UTC
Git commit d22f469be6fdd90fdd3a21a36b8441dcf4d60f46 by Harald Sitter.
Committed on 01/03/2019 at 10:32.
Pushed by sitter into branch 'master'.

improve documentation on global config cascading

Summary:
the previous description of IncludeGlobals was a bit lackluster. the new
description should make it more obvious what the various flag permutations
achieve.

Reviewers: kde-frameworks-devel, apol

Reviewed By: apol

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D19388

M  +4    -1    src/core/kconfig.h

https://commits.kde.org/kconfig/d22f469be6fdd90fdd3a21a36b8441dcf4d60f46