improve documentation on global config cascading

Summary:
the previous description of IncludeGlobals was a bit lackluster. the new
description should make it more obvious what the various flag permutations
achieve.

BUG: 306923

Reviewers: kde-frameworks-devel, apol

Reviewed By: apol

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D19388